src/libbulletc/src/btSoftBody_wrap.h


	EXPORT btSoftBody_Body* btSoftBody_Joint_getBodies(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getCfm(btSoftBody_Joint* obj);

	EXPORT bool btSoftBody_Joint_getDelete(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getDrift(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getErp(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getMassmatrix(btSoftBody_Joint* obj);

	EXPORT btScalar* btSoftBody_Joint_getRefs(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getSdrift(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getSplit(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_Prepare(btSoftBody_Joint* obj, btScalar dt, int iterations);

	EXPORT void btSoftBody_Joint_setBodies(btSoftBody_Joint* obj, btSoftBody_Body* value);

	EXPORT void btSoftBody_Joint_setCfm(btSoftBody_Joint* obj, btScalar value);

	EXPORT void btSoftBody_Joint_setDelete(btSoftBody_Joint* obj, bool value);

	//EXPORT void btSoftBody_Joint_setDrift(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setErp(btSoftBody_Joint* obj, btScalar value);

	//EXPORT void btSoftBody_Joint_setMassmatrix(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setRefs(btSoftBody_Joint* obj, btScalar* value);

	//EXPORT void btSoftBody_Joint_setSdrift(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setSplit(btSoftBody_Joint* obj, btScalar value);

	EXPORT void btSoftBody_Joint_Solve(btSoftBody_Joint* obj, btScalar dt, btScalar sor);

	EXPORT void btSoftBody_Joint_Terminate(btSoftBody_Joint* obj, btScalar dt);

	EXPORT void btSoftBody_Joint_Type(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_delete(btSoftBody_Joint* obj);


	EXPORT btSoftBody_LJoint* btSoftBody_LJoint_new();

	EXPORT btScalar* btSoftBody_LJoint_getRpos(btSoftBody_LJoint* obj);

	EXPORT void btSoftBody_LJoint_setRpos(btSoftBody_LJoint* obj, btScalar* value);


	EXPORT btSoftBody_AJoint_IControl* btSoftBody_AJoint_IControl_new();

	EXPORT btSoftBody_AJoint_IControl* btSoftBody_AJoint_IControl_Default();

	EXPORT void btSoftBody_AJoint_IControl_Prepare(btSoftBody_AJoint_IControl* obj, btSoftBody_AJoint* __unnamed0);

	EXPORT btScalar btSoftBody_AJoint_IControl_Speed(btSoftBody_AJoint_IControl* obj, btSoftBody_AJoint* __unnamed0, btScalar current);

	EXPORT void btSoftBody_AJoint_IControl_delete(btSoftBody_AJoint_IControl* obj);

	EXPORT btSoftBody_AJoint* btSoftBody_AJoint_new();

	EXPORT btScalar* btSoftBody_AJoint_getAxis(btSoftBody_AJoint* obj);

	EXPORT btSoftBody_AJoint_IControl* btSoftBody_AJoint_getIcontrol(btSoftBody_AJoint* obj);

	EXPORT void btSoftBody_AJoint_setAxis(btSoftBody_AJoint* obj, btScalar* value);

	EXPORT void btSoftBody_AJoint_setIcontrol(btSoftBody_AJoint* obj, btSoftBody_AJoint_IControl* value);


	EXPORT btSoftBody_CJoint* btSoftBody_CJoint_new();

	EXPORT btScalar btSoftBody_CJoint_getFriction(btSoftBody_CJoint* obj);

	EXPORT int btSoftBody_CJoint_getLife(btSoftBody_CJoint* obj);

	EXPORT int btSoftBody_CJoint_getMaxlife(btSoftBody_CJoint* obj);

	EXPORT void btSoftBody_CJoint_getNormal(btSoftBody_CJoint* obj);

	EXPORT btScalar* btSoftBody_CJoint_getRpos(btSoftBody_CJoint* obj);

	EXPORT void btSoftBody_CJoint_setFriction(btSoftBody_CJoint* obj, btScalar value);

	EXPORT void btSoftBody_CJoint_setLife(btSoftBody_CJoint* obj, int value);

	EXPORT void btSoftBody_CJoint_setMaxlife(btSoftBody_CJoint* obj, int value);

	//EXPORT void btSoftBody_CJoint_setNormal(btSoftBody_CJoint* obj, void value);
	EXPORT void btSoftBody_CJoint_setRpos(btSoftBody_CJoint* obj, btScalar* value);


	EXPORT btSoftBody_Config* btSoftBody_Config_new();

	EXPORT void btSoftBody_Config_getAeromodel(btSoftBody_Config* obj);

	EXPORT int btSoftBody_Config_getCiterations(btSoftBody_Config* obj);

	EXPORT int btSoftBody_Config_getCollisions(btSoftBody_Config* obj);

	EXPORT int btSoftBody_Config_getDiterations(btSoftBody_Config* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Config_getDsequence(btSoftBody_Config* obj);
	EXPORT btScalar btSoftBody_Config_getKAHR(btSoftBody_Config* obj);

	EXPORT btScalar btSoftBody_Config_getKCHR(btSoftBody_Config* obj);

	EXPORT btScalar btSoftBody_Config_getKDF(btSoftBody_Config* obj);

	EXPORT btScalar btSoftBody_Config_getKDG(btSoftBody_Config* obj);

	EXPORT btScalar btSoftBody_Config_getKDP(btSoftBody_Config* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Config_getVsequence(btSoftBody_Config* obj);
	//EXPORT void btSoftBody_Config_setAeromodel(btSoftBody_Config* obj, void value);
	EXPORT void btSoftBody_Config_setCiterations(btSoftBody_Config* obj, int value);

	EXPORT void btSoftBody_Config_setCollisions(btSoftBody_Config* obj, int value);

	EXPORT void btSoftBody_Config_setDiterations(btSoftBody_Config* obj, int value);

	//EXPORT void btSoftBody_Config_setDsequence(btSoftBody_Config* obj, btAlignedObjectArray* value);
	EXPORT void btSoftBody_Config_setKAHR(btSoftBody_Config* obj, btScalar value);

	EXPORT void btSoftBody_Config_setKCHR(btSoftBody_Config* obj, btScalar value);

	EXPORT void btSoftBody_Config_setKDF(btSoftBody_Config* obj, btScalar value);

	EXPORT void btSoftBody_Config_setKDG(btSoftBody_Config* obj, btScalar value);

	EXPORT void btSoftBody_Config_setKDP(btSoftBody_Config* obj, btScalar value);