src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Joint_getBodies(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Joint_getCfm(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btSoftBody_Joint_getDelete(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_getDrift(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Joint_getErp(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_getMassmatrix(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Joint_getRefs(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_getSdrift(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Joint_getSplit(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_Prepare(IntPtr obj, float dt, int iterations);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setBodies(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setCfm(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setDelete(IntPtr obj, bool value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setDrift(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setErp(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_Joint_setMassmatrix(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setRefs(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setSdrift(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_setSplit(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_Solve(IntPtr obj, float dt, float sor);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_Terminate(IntPtr obj, float dt);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_Type(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Joint_delete(IntPtr obj);
	}

	public class LJoint : Joint
	{
		internal LJoint(IntPtr native)
			: base(native)
		{
		}

		public LJoint()
			: base(btSoftBody_LJoint_new())
		{
		}

		public Vector3 Rpos
		{
			get
			{
				Vector3 value;
				btSoftBody_LJoint_getRpos(_native, out value);
				return value;
			}
			set { btSoftBody_LJoint_setRpos(_native, ref value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_LJoint_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_LJoint_getRpos(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_LJoint_setRpos(IntPtr obj, [In] ref Vector3 value);
	}

	public class AJoint : Joint
	{
		public class IControl
		{
			internal IntPtr _native;

			internal IControl(IntPtr native)
			{
				_native = native;
			}

			public IControl()
			{
				_native = btSoftBody_AJoint_IControl_new();
			}

			public IControl Default()
			{
                return new IControl(btSoftBody_AJoint_IControl_Default());
			}

			public void Prepare(AJoint __unnamed0)
			{
				btSoftBody_AJoint_IControl_Prepare(_native, __unnamed0._native);
			}

			public float Speed(AJoint __unnamed0, float current)
			{
				return btSoftBody_AJoint_IControl_Speed(_native, __unnamed0._native, current);
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btSoftBody_AJoint_IControl_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~IControl()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btSoftBody_AJoint_IControl_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btSoftBody_AJoint_IControl_Default();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_AJoint_IControl_Prepare(IntPtr obj, IntPtr __unnamed0);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btSoftBody_AJoint_IControl_Speed(IntPtr obj, IntPtr __unnamed0, float current);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_AJoint_IControl_delete(IntPtr obj);
		}

		internal AJoint(IntPtr native)
			: base(native)
		{
		}

		public AJoint()
			: base(btSoftBody_AJoint_new())
		{
		}

		public Vector3 Axis
		{
			get
			{
				Vector3 value;
				btSoftBody_AJoint_getAxis(_native, out value);
				return value;
			}
			set { btSoftBody_AJoint_setAxis(_native, ref value); }
		}

		public IControl Icontrol
		{
			get { return new IControl(btSoftBody_AJoint_getIcontrol(_native)); }
			set { btSoftBody_AJoint_setIcontrol(_native, value._native); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_AJoint_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_AJoint_getAxis(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_AJoint_getIcontrol(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_AJoint_setAxis(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_AJoint_setIcontrol(IntPtr obj, IntPtr value);
	}

	public class CJoint : Joint
	{
		internal CJoint(IntPtr native)
			: base(native)
		{
		}

		public CJoint()
			: base(btSoftBody_CJoint_new())
		{
		}

		public float Friction
		{
			get { return btSoftBody_CJoint_getFriction(_native); }
			set { btSoftBody_CJoint_setFriction(_native, value); }
		}

		public int Life
		{
			get { return btSoftBody_CJoint_getLife(_native); }
			set { btSoftBody_CJoint_setLife(_native, value); }
		}

		public int Maxlife
		{
			get { return btSoftBody_CJoint_getMaxlife(_native); }
			set { btSoftBody_CJoint_setMaxlife(_native, value); }
		}
        /*
		public void Normal
		{
			get { return btSoftBody_CJoint_getNormal(_native); }
			set { btSoftBody_CJoint_setNormal(_native, value._native); }
		}
        */
		public Vector3 Rpos
		{
			get
			{
				Vector3 value;
				btSoftBody_CJoint_getRpos(_native, out value);
				return value;
			}
			set { btSoftBody_CJoint_setRpos(_native, ref value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_CJoint_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_CJoint_getFriction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_CJoint_getLife(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_CJoint_getMaxlife(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_getNormal(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_CJoint_getRpos(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_setFriction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_setLife(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_setMaxlife(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_setNormal(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_CJoint_setRpos(IntPtr obj, [In] ref Vector3 value);
	}

	public class Config
	{
		internal IntPtr _native;

		internal Config(IntPtr native)
		{
			_native = native;
		}

		public Config()
		{
			_native = btSoftBody_Config_new();
		}

        public AeroModel Aeromodel
		{
			get { return btSoftBody_Config_getAeromodel(_native); }
			set { btSoftBody_Config_setAeromodel(_native, value); }
		}

		public int CIterations
		{
			get { return btSoftBody_Config_getCiterations(_native); }
			set { btSoftBody_Config_setCiterations(_native, value); }
		}

		public int Collisions
		{
			get { return btSoftBody_Config_getCollisions(_native); }
			set { btSoftBody_Config_setCollisions(_native, value); }
		}

		public int Diterations
		{
			get { return btSoftBody_Config_getDiterations(_native); }
			set { btSoftBody_Config_setDiterations(_native, value); }
		}
        /*
		public tPSolverArray Dsequence
		{
			get { return btSoftBody_Config_getDsequence(_native); }
			set { btSoftBody_Config_setDsequence(_native, value._native); }
		}
        */
		public float KAHR
		{
			get { return btSoftBody_Config_getKAHR(_native); }
			set { btSoftBody_Config_setKAHR(_native, value); }
		}

		public float KCHR
		{
			get { return btSoftBody_Config_getKCHR(_native); }
			set { btSoftBody_Config_setKCHR(_native, value); }
		}

		public float KDF
		{
			get { return btSoftBody_Config_getKDF(_native); }
			set { btSoftBody_Config_setKDF(_native, value); }
		}

		public float KDG
		{
			get { return btSoftBody_Config_getKDG(_native); }
			set { btSoftBody_Config_setKDG(_native, value); }
		}

		public float KDP
		{
			get { return btSoftBody_Config_getKDP(_native); }
			set { btSoftBody_Config_setKDP(_native, value); }
		}
